are newlines necessary with GITHUB_OUTPUT?

--- a/.github/workflows/reusable-selectbranch.yml
+++ b/.github/workflows/reusable-selectbranch.yml
@@ -27,6 +27,6 @@ jobs:
             else
                 branch="dev"
             fi
+            echo "branch=$branch\n" >> $GITHUB_OUTPUT
             echo branch=$branch
-            echo "branch=$branch" >> $GITHUB_OUTPUT
 ...
