--- a/.github/workflows/reusable-selectbranch.yml
+++ b/.github/workflows/reusable-selectbranch.yml
@@ -14,11 +14,14 @@ on:  # yamllint disable-line rule:truthy
     outputs:
       ref:
         description: "The name of the target branch for downloads from other repositories"
-        value: ${{ steps.stepx.outputs.branch }}
+        value: ${{ jobs.stepx.outputs.branch }}
       
 jobs:
   selectbranch:
     runs-on: ubuntu-22.04
+    outputs:
+      ref: ${{ steps.stepx.outputs.branch }}
+      
     steps:
       - name: Return the targeted branch for downloads from other repositories
         id: stepx
