--- a/.github/workflows/reusable-selectbranch.yml
+++ b/.github/workflows/reusable-selectbranch.yml
@@ -14,7 +14,7 @@ on:  # yamllint disable-line rule:truthy
     outputs:
       ref:
         description: "The name of the target branch for downloads from other repositories"
-        value: ${{ jobs.stepx.outputs.branch }}
+        value: ${{ jobs.selectbranch.outputs.branch }}
 
 jobs:
   selectbranch:
