--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -234,15 +234,9 @@ jobs:
           mkdir roles/roleX
           mkdir roles/roleX/{meta,tasks}
           echo --- >roles/roleX/tasks/main.yml
-          YAML=$(cat <<- YAML
-                 ---
-                 argument_specs:
-                   main:
-                     short_description: Bla
-                     description:
-                       - Bla
-          YAML
-          echo "$YAML" >roles/roleX/meta/main.yml
+          echo -e "---\nargument_specs:\n  main:\n    " >roles/roleX/meta/main.yml
+          echo -e "short_description: Bla\n    description:\n      " >>roles/roleX/meta/main.yml
+          echo -e "- Bla" >>roles/roleX/meta/main.yml
 
       - name: docs
         if: matrix.ansible_version != '2.12'
