--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -15,6 +15,9 @@ on:  # yamllint disable-line rule:truthy
       ref:
         type: string
         default: ${{ github.sha }}
+      mock:
+        type: boolean
+        default: False
 
 jobs:
 
@@ -229,14 +232,14 @@ jobs:
           ansible-test integration --requirements --python ${{ matrix.python_version }}
 
       - name: mock a role to make documentation test pass
-        if: matrix.ansible_version != 2.12
+        if: matrix.ansible_version != 2.12 and ${{ inputs.mock }} == True
         working-directory: ${{ env.working-directory }}
         run: |
-          mkdir -p roles/roleX
-          mkdir -p roles/roleX/{meta,tasks}
-          echo -en "---\nargument_specs:\n  main:\n    " >roles/roleX/meta/main.yml
-          echo -en "short_description: Bla\n    description:\n      " >>roles/roleX/meta/main.yml
-          echo -en "- Bla\n" >>roles/roleX/meta/main.yml
+          mkdir -p roles/role1
+          mkdir -p roles/role1/{meta,tasks}
+          echo -en "---\nargument_specs:\n  main:\n    " >roles/role1/meta/main.yml
+          echo -en "short_description: Bla\n    description:\n      " >>roles/role1/meta/main.yml
+          echo -en "- Bla\n" >>roles/role1/meta/main.yml
 
       - name: docs
         if: matrix.ansible_version != '2.12'
