--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -119,6 +119,41 @@ jobs:
         with:
           python-version: ${{ matrix.python_version }}
 
+      # We use the stable branch
+      - name: Checkout mafalb.ansible
+        working-directory: ${{ github.workspace }}
+        run: ansible-galaxy collection install git+${{ github.server_url }}/mafalb/ansible-collection-ansible.git -p collections
+
+      - name: Install ansible
+        working-directory: collections/ansible_collections/mafalb/ansible
+        run: |
+          ansible-playbook -D playbooks/install-ansible.yml \
+            -e '{"virtualenv_packages":["_ansible==${{ matrix.ansible_version }}",
+                                        "ansible-lint${{ matrix.ansible_lint_specifier }}",
+                                        "_ansible_test", "flake8", "antsibull-docs", "rstcheck-core"]}'\
+            -e virtualenv_python=python${{ matrix.python_version }} -t all,debug
+        env:
+          ANSIBLE_COLLECTIONS_PATH: ../../..
+
+      - name: check ansible version
+        run: |
+          source ~/.virtualenvs/ansible/bin/activate
+          ansible --version
+          ansible --version | grep "^ansible.* ${{ matrix.ansible_version }}"
+
+      - name: check python version
+        run: |
+          source ~/.virtualenvs/ansible/bin/activate
+          ansible --version | grep "^\s*python.* ${{ matrix.python_version }}"
+
+      # Move it out of the way, it could be that we want to test an unstable version of it
+      - name: Remove the downloaded collection again
+        run: |
+          source ~/.virtualenvs/ansible/bin/activate
+          ansible-galaxy collection list
+          deactivate
+          rm -fr collections/ansible_collections/mafalb/ansible
+
       # Download the needed collections
       # We use ansible-galaxy, not actions/checkout
       #
@@ -146,32 +181,6 @@ jobs:
           echo working-directory=collections/ansible_collections/$namespace/$collection_name >>"$GITHUB_ENV"
           echo "collection_name=$collection_name" >>$GITHUB_ENV
           echo "namespace=$namespace" >>$GITHUB_ENV
-
-      - name: Checkout mafalb.ansible
-        working-directory: ${{ github.workspace }}
-        run: ansible-galaxy collection install git+${{ github.server_url }}/mafalb/ansible-collection-ansible.git -p collections
-
-      - name: Install ansible
-        working-directory: collections/ansible_collections/mafalb/ansible
-        run: |
-          ansible-playbook -D playbooks/install-ansible.yml \
-            -e '{"virtualenv_packages":["_ansible==${{ matrix.ansible_version }}",
-                                        "ansible-lint${{ matrix.ansible_lint_specifier }}",
-                                        "_ansible_test", "flake8", "antsibull-docs", "rstcheck-core"]}'\
-            -e virtualenv_python=python${{ matrix.python_version }} -t all,debug
-        env:
-          ANSIBLE_COLLECTIONS_PATH: ../../..
-
-      - name: check ansible version
-        run: |
-          source ~/.virtualenvs/ansible/bin/activate
-          ansible --version
-          ansible --version | grep "^ansible.* ${{ matrix.ansible_version }}"
-
-      - name: check python version
-        run: |
-          source ~/.virtualenvs/ansible/bin/activate
-          ansible --version | grep "^\s*python.* ${{ matrix.python_version }}"
 
       - name: yamllint
         working-directory: ${{ env.working-directory }}
