--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -195,7 +195,7 @@ jobs:
         run: |
           source ~/.virtualenvs/ansible/bin/activate
           echo ansible-galaxy
-          ansible-galaxy collection list
+          ansible-galaxy collection list -vvv
           ANSIBLE_LINT_VERSION=$(NO_COLOR=1 ansible-lint --version | awk '/^ansible-lint / {print $2}')
           if [[ "$ANSIBLE_LINT_VERSION" =~ ^4 ]]; then
               if test -f .ansible-lint-4; then
