--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -199,7 +199,7 @@ jobs:
           source ~/.virtualenvs/ansible/bin/activate
           mkdir /tmp/collections
           echo ansible-galaxy
-          ansible-galaxy collection list -vvv
+          ansible-galaxy collection list -p /tmp/collections
           ANSIBLE_LINT_VERSION=$(NO_COLOR=1 ansible-lint --version | awk '/^ansible-lint / {print $2}')
           if [[ "$ANSIBLE_LINT_VERSION" =~ ^4 ]]; then
               if test -f .ansible-lint-4; then
