--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -198,7 +198,9 @@ jobs:
           source ~/.virtualenvs/ansible/bin/activate
           mkdir /tmp/collections
           echo ansible-galaxy
+          set -x
           ansible-galaxy collection list -p /tmp/collections
+          cat requirements.yml
           ANSIBLE_LINT_VERSION=$(NO_COLOR=1 ansible-lint --version | awk '/^ansible-lint / {print $2}')
           if [[ "$ANSIBLE_LINT_VERSION" =~ ^4 ]]; then
               if test -f .ansible-lint-4; then
