--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,4 +43,8 @@ jobs:
     needs:
       - lint
 
+  allsuccess:
+    uses: ./.github/workflows/reusable-allsuccess.yml
+    with:
+      joblist: "['lint','selectbranch','ansiblecollections']"
 ...
