--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,6 +30,7 @@ on:  # yamllint disable-line rule:truthy
 jobs:
 
   lint:
+    if: ${{ ! github.event.pull_request.head.repo.full_name == github.repository }}
     uses: ./.github/workflows/reusable-yamllint.yml
 
   selectbranch:
@@ -44,6 +45,7 @@ jobs:
       - lint
 
   allsuccess:
+    if: always()
     uses: ./.github/workflows/reusable-allsuccess.yml
     with:
       joblist: "['lint','selectbranch','ansiblecollections']"
