--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -23,6 +23,7 @@ on:  # yamllint disable-line rule:truthy
 jobs:
 
   fail_on_purpose:
+    if: ${{ ! github.event.pull_request.head.repo.full_name == github.repository }}
     uses: ./.github/workflows/reusable-fail.yml
 
   allsuccess:
