--- a/.github/workflows/TEST.yml
+++ b/.github/workflows/TEST.yml
@@ -27,7 +27,7 @@ jobs:
     uses: ./.github/workflows/reusable-fail.yml
 
   allsuccess:
-    if: always()
+    if: ${{ ! github.event.pull_request.head.repo.full_name == github.repository }}
     uses: ./.github/workflows/reusable-allsuccess.yml
     with:
       joblist: "['fail_on_purpose']"
