--- a/.github/workflows/reusable-allsuccess.yml
+++ b/.github/workflows/reusable-allsuccess.yml
@@ -23,6 +23,9 @@ jobs:
     if: always()
     runs-on: ubuntu-22.04
     steps:
+      - name: Debug
+        run: |
+          echo "${{ github.event.pull_request.head.repo.full_name }}"
       - name: Decide whether the needed jobs succeeded or failed
         # Avoid running twice when pull-request from same repo
         if: ${{ ! github.event.pull_request.head.repo.full_name == github.repository }}
