--- a/.github/workflows/ALLSUCCESS.yml
+++ b/.github/workflows/ALLSUCCESS.yml
@@ -23,7 +23,8 @@ on:  # yamllint disable-line rule:truthy
 jobs:
 
   fail_on_purpose:
-    if: ${{ ! github.event.pull_request.head.repo.full_name == github.repository }}
+    if: |
+      ${{ ! github.event.pull_request.head.repo.full_name == github.repository }}
     uses: ./.github/workflows/reusable-fail.yml
 
   allsuccess:
