--- a/.github/workflows/reusable-allsuccess.yml
+++ b/.github/workflows/reusable-allsuccess.yml
@@ -22,15 +22,18 @@ jobs:
   checksuccess:
     if: always()
     runs-on: ubuntu-22.04
+
     steps:
+
       - name: Debug
         run: |
           echo "${{ github.event.pull_request.head.repo.full_name }}"
-          echo ${{ ! github.event.pull_request.head.repo.full_name == github.repository }}
-          echo ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}
+          echo "${{ ! github.event.pull_request.head.repo.full_name == github.repository }}"
+          echo "${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}"
+
       - name: Decide whether the needed jobs succeeded or failed
         # Avoid running twice when pull-request from same repo
-        if: ${{ ! github.event.pull_request.head.repo.full_name == github.repository }}
+        if: ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}
         uses: re-actors/alls-green@release/v1
         with:
           # already in json format
