--- a/.github/workflows/ALLSUCCESS.yml
+++ b/.github/workflows/ALLSUCCESS.yml
@@ -23,15 +23,17 @@ on:  # yamllint disable-line rule:truthy
 jobs:
 
   fail_on_purpose:
-    if: |
-      ${{ ! github.event.pull_request.head.repo.full_name == github.repository }}
+    if: ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}
     uses: ./.github/workflows/reusable-fail.yml
 
   allsuccess:
-    if: ${{ ! github.event.pull_request.head.repo.full_name == github.repository }}
+    if: |
+      ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }} &&
+      always()
     uses: ./.github/workflows/reusable-allsuccess.yml
     with:
       joblist: "['fail_on_purpose']"
+    needs: fail_on_purpose
 
   it_failed:
     runs-on: ubuntu-22.04
