--- a/.github/workflows/ALLSUCCESS.yml
+++ b/.github/workflows/ALLSUCCESS.yml
@@ -5,7 +5,7 @@
 # see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt
 ---
 
-name: ALLSUCCESS
+name: FAILONPURPOSE
 
 on:  # yamllint disable-line rule:truthy
 
@@ -28,7 +28,6 @@ jobs:
 
   allsuccess:
     if: |
-      ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }} &&
       always()
     uses: ./.github/workflows/reusable-allsuccess.yml
     with:
