--- a/.github/workflows/fail.yml
+++ b/.github/workflows/fail.yml
@@ -14,6 +14,7 @@ jobs:
 
   fail_on_purpose:
     runs-on: ubuntu-22.04
+    #continue-on-error: true
     steps:
       - name: fail
         run: |
