--- a/.github/workflows/FAILONPURPOSE.yml
+++ b/.github/workflows/FAILONPURPOSE.yml
@@ -28,8 +28,8 @@ jobs:
 
   allsuccess:
     if: |
+      (success() || failure()) &&
       ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}
-      always()
     uses: ./.github/workflows/reusable-allsuccess.yml
     with:
       joblist: "['fail_on_purpose']"
@@ -38,8 +38,8 @@ jobs:
   it_failed:
     runs-on: ubuntu-22.04
     if:
+      (success() || failure()) &&
       ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}
-      always()
     needs:
       - allsuccess
     env:
