--- a/.github/workflows/FAILONPURPOSE.yml
+++ b/.github/workflows/FAILONPURPOSE.yml
@@ -28,8 +28,7 @@ jobs:
 
   allsuccess:
     if: |
-      (success() || failure()) &&
-      ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}
+      (success() || failure())
     uses: ./.github/workflows/reusable-allsuccess.yml
     with:
       joblist: "['fail_on_purpose']"
