--- a/.github/workflows/reusable-allsuccess.yml
+++ b/.github/workflows/reusable-allsuccess.yml
@@ -16,6 +16,9 @@ on:  # yamllint disable-line rule:truthy
       joblist:
         # if your argument was a list, we have it in json here
         type: string
+      continue-on-error:
+        type: boolean
+        default: false
 
 jobs:
 
@@ -35,6 +38,7 @@ jobs:
       - name: Decide whether the needed jobs succeeded or failed
         # Avoid running twice when pull-request from same repo
         if: ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}
+        continue-on-error: ${{ inputs.continue-on-error }}
         uses: re-actors/alls-green@release/v1
         with:
           # already in json format
