--- a/.github/workflows/FAILONPURPOSE.yml
+++ b/.github/workflows/FAILONPURPOSE.yml
@@ -32,6 +32,7 @@ jobs:
     uses: ./.github/workflows/reusable-allsuccess.yml
     with:
       joblist: "['fail_on_purpose']"
+      continue-on-error: true
     needs: fail_on_purpose
 
   it_failed:
