--- a/.github/workflows/reusable-allsuccess.yml
+++ b/.github/workflows/reusable-allsuccess.yml
@@ -42,5 +42,5 @@ jobs:
         uses: re-actors/alls-green@release/v1
         with:
           # already in json format
-          jobs: ${{ inputs.joblist }}
+          jobs: ${{ toJSON(inputs.joblist) }}
 ...
