--- a/.github/workflows/FAILONPURPOSE.yml
+++ b/.github/workflows/FAILONPURPOSE.yml
@@ -31,7 +31,7 @@ jobs:
       (success() || failure())
     uses: ./.github/workflows/reusable-allsuccess.yml
     with:
-      joblist: toJSON(needs)
+      joblist: toJSON(${{ needs }})
       continue-on-error: true
     needs:
       - fail_on_purpose
