--- a/.github/workflows/PULL.yml
+++ b/.github/workflows/PULL.yml
@@ -29,8 +29,8 @@ jobs:
 
   allsuccess:
     if: |
-      ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}
-      always()
+      ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }} &&
+      (success() || failure)
     uses: ./.github/workflows/reusable-allsuccess.yml
     with:
       joblist: "['lint','selectbranch','ansiblecollections']"
