make workflow pass

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,8 +40,12 @@ jobs:
     needs: lint
 
   allsuccess:
-    if: always()
+    if: success || failure
     uses: ./.github/workflows/reusable-allsuccess.yml
     with:
-      joblist: "['lint','selectbranch','ansiblecollections']"
+      joblist: ${{ toJSON(needs) }}
+    needs:
+      - lint
+      - selectbranch
+      - ansiblecollections
 ...
