fix success and failure to function calls

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,7 +40,7 @@ jobs:
     needs: lint
 
   allsuccess:
-    if: success || failure
+    if: success() || failure()
     uses: ./.github/workflows/reusable-allsuccess.yml
     with:
       joblist: ${{ toJSON(needs) }}
