--- a/.github/workflows/PULL.yml
+++ b/.github/workflows/PULL.yml
@@ -29,7 +29,7 @@ jobs:
 
   allsuccess:
     if: |
-      (success() || failure) &&
+      (success() || failure()) &&
       ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}
     uses: ./.github/workflows/reusable-allsuccess.yml
     with:
