one single entrypoint to please the visual type of user

--- a/.github/workflows/FAILONPURPOSE.yml
+++ b/.github/workflows/FAILONPURPOSE.yml
@@ -5,8 +5,7 @@
 # see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt
 ---
 
-name: CI
-
+name: FAILONPURPOSE
 on:  # yamllint disable-line rule:truthy
   push:
     branches:
@@ -15,20 +14,13 @@ on:  # yamllint disable-line rule:truthy
       - '*'
   schedule:
     - cron: '48 11 * * 5'
+  pull_request:
+  pull_request_review:
   workflow_dispatch:
-    inputs:
-      targeted_branch:
-        description: The name of the target branch on other repositories
-        type: choice
-        options:
-          - dev
-          - main
 
 jobs:
 
-  ci:
+  fail:
     if: ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}
-    uses: ./.github/workflows/ci-CI.yml
-    with:
-      targeted_branch: ${{ inputs.targeted_branch }}
+    uses: ./.github/workflows/ci-FAILONPURPOSE.yml
 ...
