--- a/.github/workflows/ci-FAILONPURPOSE.yml
+++ b/.github/workflows/ci-FAILONPURPOSE.yml
@@ -6,17 +6,8 @@
 ---
 
 name: FAILONPURPOSE
-
 on:  # yamllint disable-line rule:truthy
-
-  push:
-    branches:
-      - '**'
-    tags-ignore:
-      - '*'
-  schedule:
-    - cron: '48 11 * * 5'
-  workflow_dispatch:
+  workflow_call:
 
 jobs:
 
