Reusable workflow reusable-allsuccess.yml (#3)
* all-success

* renaming

* test that allsuccess check detects fail in reusable workflow

* ...

* allsuccess test

* allsuccess test

* separate to PULL and CI workflows

* debug

* fix if condition

* failonpurpose

* failonpurpose

* failonpurpose

* failonpurpose

* failonpurpose

* failonpurpose

* failonpurpose

* failonpurpose

* failonpurpose

* .

* failonpurpose

* failonpurpose

* failonpurpose

* failonpurpose

* failonpurpose

* failonpurpose

* failonpurpose

* failonpurpose

* failonerror

* dont run allsuccess from pull workflow

* do not run allsuccess when pull-request

* work on allsuccess

* make lint happy

* make workflow pass

* 2 workflows for FAILONPURPOSE

* fix success and failure to function calls

* fix naming

* one single entrypoint to please the visual type of user

* make ci-FAILONPURPOSE reusable

* just one entrypoint for push and pull

* fix CI

--- a/.github/workflows/FAILONPURPOSE.yml
+++ b/.github/workflows/FAILONPURPOSE.yml
@@ -5,8 +5,7 @@
 # see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt
 ---
 
-name: CI
-
+name: FAILONPURPOSE
 on:  # yamllint disable-line rule:truthy
   push:
     branches:
@@ -24,12 +23,9 @@ on:  # yamllint disable-line rule:truthy
         options:
           - dev
           - main
-
 jobs:
 
-  ci:
+  fail:
     if: ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}
-    uses: ./.github/workflows/ci-CI.yml
-    with:
-      targeted_branch: ${{ inputs.targeted_branch }}
+    uses: ./.github/workflows/ci-FAILONPURPOSE.yml
 ...
