set branch to main if pull-request against main

--- a/.github/workflows/reusable-selectbranch.yml
+++ b/.github/workflows/reusable-selectbranch.yml
@@ -30,6 +30,9 @@ jobs:
                 branch="main"
             elif test "${{ github.ref_name }}" = "main"; then
                 branch="main"
+            elif test "${{ github.base_ref }}" = "main"; then
+                # pull-request
+                branch="main"
             else
                 branch="dev"
             fi
