make syntax happy

--- a/.github/workflows/PULL.yml
+++ b/.github/workflows/PULL.yml
@@ -12,7 +12,7 @@ on:  # yamllint disable-line rule:truthy
 jobs:
 
   sanity:
-    if: github.base_ref == "main"
+    if: github.base_ref == 'main'
     runs-on: ubuntu-22.04
     env:
       BASE_BRANCH: ${{ github.base_ref }}
