--- a/.github/workflows/PULL.yml
+++ b/.github/workflows/PULL.yml
@@ -24,4 +24,12 @@ jobs:
       - name: Check for @dev references to reusable workflows
         run: |
           grep -v grep .github/workflows/*.yml | grep -E "workflows/.*yml@[^m][^a]?[^i]?[^n]?" && false
+  allsuccess:
+    if: success() || failure()
+    uses: ./.github/workflows/reusable-allsuccess.yml
+    with:
+      joblist: ${{ toJSON(needs) }}
+    needs:
+      - sanity
+
 ...
