--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,6 +16,9 @@ on:  # yamllint disable-line rule:truthy
   schedule:
     - cron: '48 11 * * 5'
   pull_request:
+    branches:
+      - main
+      - dev
   workflow_dispatch:
     inputs:
       targeted_branch:
