--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -8,9 +8,6 @@
 name: PULLREQUEST
 on:  # yamllint disable-line rule:truthy
   pull_request:
-    branches:
-      - dev
-      - main
 
 jobs:
 
@@ -28,6 +25,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Check for @dev references to reusable workflows
+        if: |
+          github.base_ref == 'main'  # pull_request against main
+          || github.ref_name == 'main'
         run: |
           grep -v grep .github/workflows/*.yml | grep -E "workflows/.*yml@[^m][^a]?[^i]?[^n]?" && false
 
