--- a/.github/workflows/ci-FAILONPURPOSE.yml
+++ b/.github/workflows/ci-FAILONPURPOSE.yml
@@ -13,7 +13,7 @@ jobs:
 
   fail_on_purpose:
     if: ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}
-    uses: mafalb/workflows/.github/workflows/ci-fail.yml@dev
+    uses: ./.github/workflows/ci-fail.yml
 
   allsuccess:
     if: |
