--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,7 +5,7 @@
 # see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt
 ---
 
-name: CI
+name: Ci
 
 on:  # yamllint disable-line rule:truthy
   push:
@@ -32,7 +32,7 @@ jobs:
 
   ci:
     if: ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}
-    uses: ./.github/workflows/ci-CI.yml
+    uses: ./.github/workflows/ci-ci.yml
     with:
       targeted_branch: ${{ inputs.targeted_branch }}
 ...
