--- a/.github/workflows/FAILONPURPOSE.yml
+++ b/.github/workflows/FAILONPURPOSE.yml
@@ -5,7 +5,7 @@
 # see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt
 ---
 
-name: FAILONPURPOSE
+name: FailOnPurpose
 on:  # yamllint disable-line rule:truthy
   push:
     branches:
@@ -27,5 +27,5 @@ jobs:
 
   fail:
     if: ${{ ! (github.event.pull_request.head.repo.full_name == github.repository) }}
-    uses: ./.github/workflows/ci-FAILONPURPOSE.yml
+    uses: ./.github/workflows/ci-failonpurpose.yml
 ...
