--- a/.github/workflows/ci-failonpurpose.yml
+++ b/.github/workflows/ci-failonpurpose.yml
@@ -5,7 +5,7 @@
 # see LICENSE or https://www.gnu.org/licenses/gpl-3.0.txt
 ---
 
-name: FAILONPURPOSE
+name: FailOnPurpose
 on:  # yamllint disable-line rule:truthy
   workflow_call:
 
