--- a/.github/workflows/reusable-ansiblecollection.yml
+++ b/.github/workflows/reusable-ansiblecollection.yml
@@ -159,9 +159,11 @@ jobs:
           ansible-galaxy collection list
 
       - name: Download the collection artifact
+        needs:
+          - prepare
         uses: actions/download-artifact@v4
         with:
-          name: ansible-collections-${{ outputs.prepare.outputs.ref }}
+          name: ansible-collections-${{ needs.prepare.outputs.ref }}
 
       # Download the needed collections
       # We use ansible-galaxy, not actions/checkout
