--- a/.github/workflows/ci-ci.yml
+++ b/.github/workflows/ci-ci.yml
@@ -24,6 +24,7 @@ jobs:
     needs: lint
 
   uploadansibleartifact:
+    needs: selectbranch
     uses: ./.github/workflows/reusable-uploadansibleartifact.yml
     with:
       targeted_branch: ${{ needs.selectbranch.outputs.ref }}
@@ -33,8 +34,6 @@ jobs:
     uses: ./.github/workflows/reusable-ansiblecollection.yml
     with:
       filename: ${{ needs.uploadansibleartifact.outputs.filename }}
-    needs:
-      - selectbranch
 
   allsuccess:
     if: success() || failure()
@@ -44,5 +43,6 @@ jobs:
     needs:
       - lint
       - selectbranch
+      - uploadansibleartifact
       - ansiblecollection
 ...
